Put revised research process text on page

--- a/policeDataNotes.html
+++ b/policeDataNotes.html
@@ -46,18 +46,19 @@
   </div>
   <div class="container">
     <div class="row top">
-      <h1>Police Source </h1>
-      <p>To see information on the research process, and other relevant notes click <a
-          href="policeDataNotes.html">here</a>.</p>
-      <p>Police Source Data
-        This page is about answering what I think is the most important question of this project: can data projects get
-        the police source data they need? When I say police source data, I am referring to the raw data that is
-        collected by police departments that ideally, people can access to perform various analyses on. Examples of data
-        projects using various forms of policing data can be seen on the Data Project Spotlight page.
-      </p>
-      <p>Below I outline my process and an overview of the results of my searching experience. But you can also skip
-        straight to the acquiring data section if you would just like to read the raw information on what it is like to
-        obtain this data.</p>
+      <h1>Police Source Data Research Process</h1>
+      <p>When I went to explore the topic of police data accessibility, my goal was to answer three key questions:</p>
+      <ol>
+        <li>What is the policy regarding obtaining policing data? (i.e. how should the acquisition and availability of police data work in theory?)</li>
+        <li>What are the major avenues for acquiring policing data?</li>
+        <li>What is the real world experience of data projects and data scientists when obtaining policing data for data advocacy projects?</li>
+      </ol>
+      <p>These questions were chosen to provide a broad overview of what the state of policing data accessibility is like. I also believed that answering these questions would cover the most commonly asked questions that I get when I bring up my own work using policing data.</p>
+      <p>To answer these questions, I conducted a number of searches, drawing on a broad array of potential sources. I searched for academic papers and articles using academic databases, data advocacy projects, articles written by data scientists doing this work, legal resources about policy, government databases, and official government websites on legislation and records requests processes.</p>
+      <h2>Summary of my Research Results</h2>
+      <p>I found large data advocacy projects that included insightful information on their records request experiences. This combined with articles written by people doing this work and the exploration of government data portals allowed me to confidently provide perspective on questions two and three. The synthesis of this information is what enabled me to write the information on the <a href="policeData.html">Police Source Data page</a>.</p>
+      <p>However, I was ultimately unable to find the sources I desired to answer the question regarding policy surrounding police data acquisition. I was able to find ample information on federal data processes, under FOIA (Freedom of Information Act - key resources listed on the Police Source Data page). But I was unable to find reputable, up-to-date, and applicable sources for general information on state freedom of information legislation. It is worth noting that if you are looking to find details for one specific state, the legislation should be publicly accessible for your review. Additionally, most states have public records requests portals with guidance on how to submit requests (see the <a href="https://www.mass.gov/topics/public-records-requests">MA portal</a> as an example). While it is great that these government resources exist, my research results showed that the reality of acquiring data doesn’t always match the expectations. This is why I was really hoping to find an external, third party piece that can interpret the legislation more based in reality and/or at a more nation wide level.</p>
+      <p>While I am disappointed I was unable to find this information, this lack of accessible information in itself is an important insight. The lack of accessible information communicates that there is yet another barrier in place of acquiring policing data. Without readily available information on the policies surrounding state policy, that is in a form that is relevant to policing data and interpretable without needing to pour through page upon page of legislation, it keeps people in the dark from what police are supposed to be doing regarding the openness of their information. This is yet another way that police are unable to be properly held accountable for their actions. Without the knowledge of what police should be doing according to the law, people submitting records requests don’t have the tools in the scenario that something goes wrong.</p>
     </div>
 </body>
 </html>
