Add image for police scorecard with caption

--- a/dataProjects.html
+++ b/dataProjects.html
@@ -115,7 +115,7 @@
       <h2>Policing Data Projects</h2>
       <div class="project">
         <h3><a href="https://mappingpoliceviolence.org/">Mapping Police Violence</a></h3>
-        <img class="project" src="assets/img/spotlight/mappingPoliceViolence/map.jpg">
+        <img class="project" src="assets/img/spotlight/mappingPoliceViolence-map.jpg">
         <p class="fig-cap">Screenshot of the interactive map illustrating every police killing in 2021 from the Mapping
           Police Violence project</p>
         <p>Project Description: Collection of interactive tools, maps, and figures that illustrate police violence in
@@ -128,9 +128,8 @@
       </div>
       <div class="project">
         <h3><a href=https://policescorecard.org/findings>Police Scorecard</a></h3>
-        <img class="project" src="assets/img/spotlight/mappingPoliceViolence/map.jpg">
-        <p class="fig-cap">Screenshot of the interactive map illustrating every police killing in 2021 from the Mapping
-          Police Violence project</p>
+        <img class="project" src="assets/img/spotlight/policeScorecard-interact.jpg">
+        <p class="fig-cap">Screenshot of the Police Scorecard's interactive data visualization tool which shows racial discrimination for each department in the dataset based on user selectable metrics (e.g. Drug Arrest Rates, Deadly Force)</p>
         <p>Project Description: The Police Scorecard is claimed as the first nationwide public evaluation in the United
           States. It's goal is to provide insight to the many issues in policing to "help communities, researchers,
           police leaders and policy-makers take data-informed action to reduce police use of force, increase
