--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
   </div>
   <div class="navbar">
     <a href="index.html">Home</a>
-    <a class="active" href="policeData.html">Police Data</a>
+    <a href="policeData.html">Police Data</a>
     <a href="otherResources.html">Other Resources</a>
     <div class="dropdown">
       <button class="dropbtn">Data Advocacy
