Add data spotlight link to police data page

--- a/policeData.html
+++ b/policeData.html
@@ -122,7 +122,7 @@
         data. This list is based on the synthesis of two major data advocacy projects and articles by Sarah Ryley, an
         investigative and data journalist for the Boston Globe. The two data advocacy projects I used for this section
         are the Police Score Card Project and the Mapping Police Violence Project. More details about these projects can
-        be seen on the data spotlight page.</p>
+        be seen on the <a href="dataProjects.html">data spotlight page</a>.</p>
       <p>Potential issues and barriers when requesting policing data...</p>
       <ol>
         <li>
