Remove sources and about link from footer

--- a/dataProjects.html
+++ b/dataProjects.html
@@ -129,7 +129,9 @@
       <div class="project">
         <h3><a href=https://policescorecard.org/findings>Police Scorecard</a></h3>
         <img class="project" src="assets/img/spotlight/policeScorecard-interact.jpg">
-        <p class="fig-cap">Screenshot of the Police Scorecard's interactive data visualization tool which shows racial discrimination for each department in the dataset based on user selectable metrics (e.g. Drug Arrest Rates, Deadly Force)</p>
+        <p class="fig-cap">Screenshot of the Police Scorecard's interactive data visualization tool which shows racial
+          discrimination for each department in the dataset based on user selectable metrics (e.g. Drug Arrest Rates,
+          Deadly Force)</p>
         <p>Project Description: The Police Scorecard is claimed as the first nationwide public evaluation in the United
           States. It's goal is to provide insight to the many issues in policing to "help communities, researchers,
           police leaders and policy-makers take data-informed action to reduce police use of force, increase
@@ -190,22 +192,27 @@
         context when considering the wider potential applications of data advocacy and activist movements, as
         non-policing data can be easier to acquire in many cases and has potential to be more reliable, as it may not be
         controlled by carceral entities.</p>
-      <a href="https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2782809">Association Between Prision Crowding and COVID-19 Incidence Rates in MA Prisons</a>
-      <p>A study which used statistical analysis to prove that prison crowding lead to higher cases of COVID-19 using data from acquired from an <a href="https://www.aclum.org/en/cases/committee-public-counsel-services-v-chief-justice-trial-court-and-committee-public-counsel">ACLU lawsuit</a>. The tracking website for the data acquired from this lawsuit, in conjunction with other then publicly available data, can be seen <a href="https://data.aclum.org/sjc-12926-tracker/">here</a>.</p>
-      <a href="https://livesontheline.org/report/">Lives on the Line: Women with Incarcerated Loved Ones and the Impact of COVID-19 Behind Bars</a>
-      <p>Data project by the Essie Justice Group, a nonprofit organization of women with incarcerated loved ones "taking on the rampant injustices caused by mass incarceration". This report was created in respones to COVID-19 conditions in jails and prisions and created a survey to send out to incarcerated peoples loved ones to get concrete data that can "illustrate what was happening behind bars and buoy the efforts of advocates across the country fighting to free incarcerated people admist the COVID-19 pandemic".</p>
-      <p>I chose to link this project, as it is an example of a abolitionist framed data project, and an example of a project which quantifys harms of the carceral state without relying on carceral data (i.e. data collected directly by police or prisons, with the potential for intentional manipulation or other data quality issues).</p>
-      <a href="https://pubmed.ncbi.nlm.nih.gov/34352850/">Abortion Access for Incarcerated People: Incidence of Abortion and Policies at U.S. Prisons and Jails</a>
+      <a href="https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2782809">Association Between Prision
+        Crowding and COVID-19 Incidence Rates in MA Prisons</a>
+      <p>A study which used statistical analysis to prove that prison crowding lead to higher cases of COVID-19 using
+        data from acquired from an <a
+          href="https://www.aclum.org/en/cases/committee-public-counsel-services-v-chief-justice-trial-court-and-committee-public-counsel">ACLU
+          lawsuit</a>. The tracking website for the data acquired from this lawsuit, in conjunction with other then
+        publicly available data, can be seen <a href="https://data.aclum.org/sjc-12926-tracker/">here</a>.</p>
+      <a href="https://livesontheline.org/report/">Lives on the Line: Women with Incarcerated Loved Ones and the Impact
+        of COVID-19 Behind Bars</a>
+      <p>Data project by the Essie Justice Group, a nonprofit organization of women with incarcerated loved ones "taking
+        on the rampant injustices caused by mass incarceration". This report was created in respones to COVID-19
+        conditions in jails and prisions and created a survey to send out to incarcerated peoples loved ones to get
+        concrete data that can "illustrate what was happening behind bars and buoy the efforts of advocates across the
+        country fighting to free incarcerated people admist the COVID-19 pandemic".</p>
+      <p>I chose to link this project, as it is an example of a abolitionist framed data project, and an example of a
+        project which quantifys harms of the carceral state without relying on carceral data (i.e. data collected
+        directly by police or prisons, with the potential for intentional manipulation or other data quality issues).
+      </p>
+      <a href="https://pubmed.ncbi.nlm.nih.gov/34352850/">Abortion Access for Incarcerated People: Incidence of Abortion
+        and Policies at U.S. Prisons and Jails</a>
     </div>
-  </div>
-  </div>
-  <div class="row">
-    <div class="footer">
-      <ul>
-        <li><a href="about.html">Sources & About</a></li>
-      </ul>
-    </div>
-  </div>
   </div>
 </body>
 
