--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <link rel="manifest" href="assets/img/favicon/site.webmanifest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/2a97e054bf.js" crossorigin="anonymous"></script>
 </head>
@@ -108,14 +110,6 @@
     <div class="row">
       <h2>Project Background</h2>
       <p>More on my reasons for doing the project</p>
-    </div>
-    <div class="row">
-      <div class="footer">
-        <ul>
-          <li><a href="about.html">Sources & About</a></li>
-          <!-- Background on Project - reasoning and my personal background - and Site References (if time should link them to this page) -->
-        </ul>
-      </div>
     </div>
   </div>
 </body>
