--- a/policeData.html
+++ b/policeData.html
@@ -198,23 +198,27 @@
         quantify the harms that police are doing in the communities that they are in.</p>
       <h2>Resources on Federal Requests (FOIA)</h2>
       <ul>
-        <li><a href="https://nsarchive2.gwu.edu/nsa/foialeghistory/legistfoia.htm#:~:text=FOIA%20Legislative%20History&text=1966%20Passage%20-%20The%20FOIA%20was,went%20into%20effect%20in%201967.">FOIA Legislative History</a> - detailed information on all of the FOIA acts and amendments of all the acts</a></li>
-        <li><a href="https://www.britannica.com/topic/Freedom-of-Information-Act">Britannica FOIA Short Info Guide and History</a> - overview of FOIA shortcomings and its early history, less details on amendments</li>
-        <li><a href="https://www.foia.gov/?id=308ccf48-e6c3-4533-aca4-b883e9fd8a9a&type=component">Foia.gov</a> - homepage for submitting requests for eligible organizations including information on required info, legislation, and processing time. It is interesting to note that the requests labeled as “complex” generally have very long fill times, such as the CIA’s 332 hour average processing time.<ul><li><a href="https://www.foia.gov/how-to.html">FOIA Request Guide from foia.gov</a></li></ul></li>
+        <li><a
+            href="https://nsarchive2.gwu.edu/nsa/foialeghistory/legistfoia.htm#:~:text=FOIA%20Legislative%20History&text=1966%20Passage%20-%20The%20FOIA%20was,went%20into%20effect%20in%201967.">FOIA
+            Legislative History</a> - detailed information on all of the FOIA acts and amendments of all the acts</a>
+        </li>
+        <li><a href="https://www.britannica.com/topic/Freedom-of-Information-Act">Britannica FOIA Short Info Guide and
+            History</a> - overview of FOIA shortcomings and its early history, less details on amendments</li>
+        <li><a href="https://www.foia.gov/?id=308ccf48-e6c3-4533-aca4-b883e9fd8a9a&type=component">Foia.gov</a> -
+          homepage for submitting requests for eligible organizations including information on required info,
+          legislation, and processing time. It is interesting to note that the requests labeled as “complex” generally
+          have very long fill times, such as the CIA’s 332 hour average processing time.<ul>
+            <li><a href="https://www.foia.gov/how-to.html">FOIA Request Guide from foia.gov</a></li>
+          </ul>
+        </li>
       </ul>
       <h2>Other Resources</h2>
       <ul>
-        <li><a href="https://docs.google.com/presentation/d/1jea-8ivPxqONKaP_eSdsUnzUnE-hP2PkQsCE_sO3eHg/edit#slide=id.p">Sarah Ryley Public Records Request Guide</a></li>
+        <li><a
+            href="https://docs.google.com/presentation/d/1jea-8ivPxqONKaP_eSdsUnzUnE-hP2PkQsCE_sO3eHg/edit#slide=id.p">Sarah
+            Ryley Public Records Request Guide</a></li>
       </ul>
     </div>
-    <div class="row">
-      <div class="footer">
-        <ul>
-          <li><a href="about.html">Sources & About</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </body>
 
 </html>
