Change navbar to have sources link, remove "Other Resources"

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
   <div class="navbar">
     <a class="active" href="index.html">Home</a>
     <a href="policeData.html">Police Data</a>
-    <a href="otherResources.html">Other Resources</a>
     <div class="dropdown">
       <button class="dropbtn">Data Advocacy
         <i class="fa fa-caret-down"></i>
@@ -43,7 +42,7 @@
         <a href="data&abolition.html">Data Advocacy & Abolition</a>
       </div>
     </div>
-    <!-- Place to list other items I find during research and explain if time -->
+    <a href="sources.html">Sources</a>
   </div>
   <div class="cover">
     <img src='assets/img/spread.png' class="spread" alt="Full width cover image">
