--- a/policeDataNotes.html
+++ b/policeDataNotes.html
@@ -33,7 +33,6 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="policeData.html">Police Data</a>
-    <a href="otherResources.html">Other Resources</a>
     <div class="dropdown">
       <button class="dropbtn">Data Advocacy
         <i class="fa fa-caret-down"></i>
@@ -43,6 +42,7 @@
         <a href="data&abolition.html">Data Advocacy & Abolition</a>
       </div>
     </div>
+    <a href="sources.html">Sources</a>
   </div>
   <div class="container">
     <div class="row top">
