--- a/404.html
+++ b/404.html
@@ -15,7 +15,9 @@
   <link rel="manifest" href="assets/img/favicon/site.webmanifest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/2a97e054bf.js" crossorigin="anonymous"></script>
 </head>
@@ -30,7 +32,6 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="policeData.html">Police Data</a>
-    <a href="otherResources.html">Other Resources</a>
     <div class="dropdown">
       <button class="dropbtn">Data Advocacy
         <i class="fa fa-caret-down"></i>
@@ -40,6 +41,7 @@
         <a href="data&abolition.html">Data Advocacy & Abolition</a>
       </div>
     </div>
+    <a href="sources.html">Sources</a>
   </div>
   <div class="container">
     <div class="row p404">
