Add resources to data advocacy and abolition page

--- a/data&abolition.html
+++ b/data&abolition.html
@@ -16,7 +16,9 @@
   <link rel="manifest" href="assets/img/favicon/site.webmanifest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/2a97e054bf.js" crossorigin="anonymous"></script>
 </head>
@@ -31,7 +33,6 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="policeData.html">Police Data</a>
-    <a href="otherResources.html">Other Resources</a>
     <div class="dropdown">
       <button class="dropbtn">Data Advocacy
         <i class="fa fa-caret-down"></i>
@@ -41,58 +42,51 @@
         <a class="active" href="data&abolition.html">Data Advocacy & Abolition</a>
       </div>
     </div>
+    <a href="sources.html">Sources</a>
   </div>
   <div class="container">
     <div class="row top">
       <h1>Data Advocacy & Abolition (?)</h1>
-      <p>Introduction to subsection. Important components for this page:</p>
-      <ul>
-        <li>a</li>
-        <li>b</li>
-      </ul>
+      <p>There is relevancy in respect to data advocacy and abolition. Quantitative data is valued highly in our
+        society, and using data advocacy to illustrate harms perpetuated by prisons, jails, police, and related entities
+        could assist abolitionist movements in efforts to push for policy changes or to attract people to movements.
       </p>
-      <div>
-        <!-- Policy section-->
-        <h2>Policy</h2>
-        <p>1. What data do the police have that should be open to the public? 2. What are the polcies regarding police
-          data and them having to make it accessible?
-      </div>
-      <div>
-        <!-- Access Data section-->
-        <h2>Acquiring Data</h2>
-        <p>3. What is the real world experience of trying to access this data? What troubles are encountered (cost,
-          tie, etc.)? What is the process for acqiring police data and how does it vary state to state?</p>
-        <p>Potential source: the police scorecard</p>
-        <div>
-          <h3>My Data Acquisition (finding?) Experience</h3>
-          <p>Include details of search and what came up. Or this could be the section where I can talk about ADE
-            project experiences.</p>
-        </div>
-      </div>
-      <div>
-        <h2>Data Quality</h2>
-        <p>In addition to policing data being hard to acquire, there are also potential concerns when it comes to the
-          quality of the data. For example, while I was able to find a number of openly available police datasets when
-          searching national government databases, the usefulness of this data is questionable. Many of the datasets
-          contained old or limited timelines of data, despite citing that they were supposed to be updated to the
-          publicly accessible version as often as weekly (CITE 2-3 SPECIFIC DATASETS).</p>
-        <p>When it comes to </p>
-      </div>
+      <p>However, as seen on the Data Spotlight page, there is also potential harm that can come from data advocacy
+        efforts if they do use framing that contextualizes the extent of the harm of carceral systems. It is important
+        that before any data advocacy effort is taken, that the potential impacts, particularly harms, are heavily
+        considered. Below, I list a number of external resources which provide important context on this topic. The
+        resources include information such as important considerations before doing data work, right to refuse, and the
+        historical context of carceral data harms.</p>
+      <h3>Resources</h3>
+      <a href="https://onezero.medium.com/refusal-a-beginning-that-starts-with-an-end-2b055bfc14be">To Build a Better
+        Future, Designers Need to Start Saying ‘No’ (Chelsea Barbas)</a>
+      <p>Article which discusses the potential and concept of design refusal. The concept of design refusal is underused
+        and underdiscussed, but is an important one when the potential for misuse or misapplication of data is high.</p>
+      <a href="https://www.manifestno.com/">Manifest-no</a>
+      <p>A list of declarations of “refusal and commitment” for feminist data advocacy practices to refuse harmful
+        data practices. A useful list of things to consider/follow before starting this type of work. Overall, it
+        calls for data projects to form direct relationships with the groups that are being researched, as well as
+        intentionality and being proactive about potential impacts.</p>
+      <a href="https://www.carceral.tech/why">Why - Carceral Tech Resistance Network</a>
+      <p>Carceral Tech Resistence Network builds archives and databases to “catalog the the history, emergence, and
+        dispersion of
+        carceral tech”. They also host training for community organizers to “incorporate tech-facing tactics” into
+        their abolition work. The linked page is about why they do this work against carceral systems. I recommend
+        this as an example of why and how data advocacy can be important to anti-carceral activist efforts.</p>
+      <a href="https://www.tandfonline.com/doi/full/10.1080/01972243.2021.1920081">Numbers will not save us: Agnostic data practices (Roderic Crooks)</a>
+      <p>Academic paper which provides criticisms of contemporary data
+        activism for the ways it can damage or place responsibility on the communities it was designed to help. It
+        discusses the concept of “agonistic data practices”, which are “tactics which draw on affective and narrative
+        potentialities of data to dispute the terms by which majoritarian political agents rationalize their actions
+        and direct policy”. This paper provides important cricisim and context for the harms that data advocacy can do
+        if data becomes disconnected from people and stories.</p>
+      <a href="https://journals.sagepub.com/doi/full/10.1177/20539517211028252">Against carceral data collection
+          in response to anti-Asian violences (Rachel Kuo, Matthew Bui)</a><p>Academic paper providing criticism on
+        the creation of “data infrastructures by-and for-law enforcement through hate crimes legislation” in response
+        to anti-Asian violences. This paper is good context on how carceral data systems can be dangerous, and why any
+        data work needs to consider if it may serve to increase carceral data regimes.</p>
+      </ul>
     </div>
-    <div class="row">
-      <h1> References </h1>
-      <ol>
-        <li>source - can also put these on the about page (but maybe store these here for now)</li>
-      </ol>
-    </div>
-    <div class="row">
-      <div class="footer">
-        <ul>
-          <li><a href="about.html">Sources & About</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </body>
 
 </html>
