--- a/index.html
+++ b/index.html
@@ -46,71 +46,40 @@
   </div>
   <div class="cover">
     <img src='assets/img/spread.png' class="spread" alt="Full width cover image">
+    <p class="fig-cap" style="max-width: 50%;">Screenshot of the interactive map illustrating every police killing in
+      2021 from the Mapping Police Violence project</p>
   </div>
   <div class="container">
     <div class="row top">
-      <p>Brief overview of what this project is:</p>
+      <p>I am a student, and this semester I have learned a lot more about anti-police and anti-prison movements. I come
+        from a background heavy in data science, and learning more about these movements has made me wonder about the
+        potential for data advocacy projects in supporting activist efforts. We come from a society that values “hard
+        data”, quantifying racial bias in policing or other carceral systems has the potential to be a persuasive tool
+        for shedding light on systemic racism and the harms of the prision industrial complex.</p>
+      <p>The crux of much of data advocacy is in the data sources. Without data, there can be no data project. For this
+        reason, I wanted to investigate the accessibility of policing data as part of a larger question about the
+        application of data advocacy within abolitionist movements. </p>
+      <p>I set out to provide both myself, and readers, with answers to three key questions:</p>
       <ol>
-        <li>What is my reason for doing this project? <- this can probably be put on the same page, but put it below in
-            a seperate subheading that way the essential information is first. Any "why" should be limited to 1 sentece
-            (2 max) in this intro.</li>
-        <li>What will I be exploring? <- this is where I will be more clearly defining my scope</li>
-        <li>Who is my target audience and what do I hope they will get out of it?</li>
-        <li>Brief overview of what the project is: what is my reason for doing this project, who is my target audience,
+        <li>What is the accessibility of policing data?</li>
+        <li>What data advocacy efforts can be done with policing data?</li>
+        <li>What are the potential applications, if any, of data advocacy towards police and prison abolition efforts?
         </li>
       </ol>
-      <p>My goal with this website is to provide visitors with
-        explain some places where you can get policing data,
-      </p>
-      <p>I am going to explain some places where you can get policing data based on research I performed using my
-        background as a data science person who has prior experience working on a project heavily based around the topic
-        of policing data (and going through an active process of trying to get police data).</p>
-      <hr>
-      <p>INTRO SENTENCE ABOUT MASS INCARCERATION AND HARMS. With this immense amount of carceral violence, - can also
-        just skip to below. </p>
-      <p>I come from a background heavy in data science. So as I have started learning more about police and prision
-        abolition efforts, I have wondered about the potentials for data advocacy as part of these movements. We come
-        from a society that values "hard data" and quantifying racial bias in policing or carceral systems has the
-        potential to be a persuasive tool for shedding light on systemic racism and the impacts of the prision
-        industrial complex (many potentials for data, such as reducing incarceration through evidence in court - though
-        this has limiatitions, pushing for abolitionist reforms, growing awareness and participation in abolitionist
-        movements).</p>
-      <p>The crux of much of data advocacy is in the data sources. It is often difficult, or impossible, to find data
-        period. And it is harder still to find data that is of sufficent quality (up to date, not too much missing or
-        inaccurate information, enough data points, etc.) to perform the analysis that you actually want to perform. For
-        this reason, I wanted to investigate the accessibility and quality of policing data for use in data advocacy
-        projects in abolitionist efforts. My goal with this site is to share my learning to hopefully give some
-        perspecitive on:</p>
+      <p>To answer these questions, I have created three separate pages as resources:</p>
       <ol>
-        <li>Policies regarding the openness of police data to the public, and what this looks like in practice in terms
-          of acquiring data.</li>
-        <li>Some of the limitations of using policing data for data advocacy projects, particularly in an abolitionist
-          context.</li>
-        <li>Examples of data advocacy projects using police data, both abolitionist data projects and also projects that
-          are more reformist (or even less so, more info on PAGE).</li>
-        <li>Introduction to considerations and dialogue around the positioning of data advocacy in respect to police and
-          prision abolition activist movements. What things should we be cautious of when considering data as a
-          potential solution?</li>
+        <li><a href="policeData.html">Police Data</a> - an outline of key places that police source data can be
+          acquired, and provide insights into the accessibility issues of acquiring this data.</li>
+        <li><a href="dataProjects.html">Data Project Spotlight</a> - list of a select number of data projects to give
+          context on the data advocacy work that is being done with policing data.</li>
+        <li><a href="data&abolition.html">Data Advocacy & Abolition</a> - resources for learning more about potential
+          pitfalls of data advocacy efforts when used for abolition, as well as best practices.</li>
       </ol>
-      <h3>Old</h3>
-      <p>There are questions to as to how, and if at all, that data advocacy plays a role in abolitionist movements. I
-        discuss these in brief on the <a href="data&abolition.html">Data Advocacy & Abolition</a> page. However, to do
-        any sort of data advocacy, there needs to be data.
-
-        The crux of data advocacy is within the source data itself. You need data to be able to do analysis on. </p>
-      <p>This semester, I got the opportunity to work on a project with the goal of using police citation data to prove,
-        with statistical sigificance, racial bias in police traffic stops in the hopes that our findings can be used in
-        court to throw out evidence on the basis of racial profiling. Here, our goal is to use data advocacy to prove
-        something we already know - that police are racist and that their racist actions lead to the disproportinate
-        targetting, gathering of evidence, and incarceration of low-income people of color.</p>
-      <p>However, unfortunately through the use of data advocacy, there is the potential to reduce incarceration by
-        creating course admissable reports using statistics proving racism </p>
+      <h2>Inspiration & Context from my Own Work</h2>
+      <p>Part of the inspiration for this project was the recent community engaged data advocacy work I have gotten the chance to do, which has made me think about the wider applications of data advocacy for helping to reduce  the impacts of incarceration.</p>
+      <p>This semester, I got the opportunity to work on a project with the goal of using police citation data to prove, with statistical sigificance, racial bias in a police officer’s traffic stops in the hopes that our findings can be used in court to suppress evidence on the basis of racial profiling. Here, our goal is to use data advocacy to prove something that our team and the communities we are working with already know - that police are racist and that their racist actions lead to the disproportinate targetting, gathering of evidence, and incarceration of low-income people of color.</p>
+      <p>Through the use of data advocacy, there is the potential to reduce incarceration by creating court admissable reports with statistical proof of racial profiling. Working on this project has given me hope that data advocacy can serve a role in reducing the scale of incarceration. But, I must also consider my positionality as someone who is less directly impacted by carceral harms and who works with data science fields as a potential source of bias. I tried to keep this in mind with my work, and also sought out sources critical of data advocacy’s application for activist efforts.</p>
     </div>
-    <div class="row">
-      <h2>Project Background</h2>
-      <p>More on my reasons for doing the project</p>
-    </div>
-  </div>
 </body>
 
 </html>
