Link mapping police violence caption to project

--- a/dataProjects.html
+++ b/dataProjects.html
@@ -114,7 +114,7 @@
       <!-- Policing Data Projects -->
       <h2>Policing Data Projects</h2>
       <div class="project">
-        <h3><a href="https://mappingpoliceviolence.org/">Mapping Police Violence</a></h3>
+        <h3 id="mapping-police-violence"><a href="https://mappingpoliceviolence.org/">Mapping Police Violence</a></h3>
         <img class="project" src="assets/img/spotlight/mappingPoliceViolence-map.jpg">
         <p class="fig-cap">Screenshot of the interactive map illustrating every police killing in 2021 from the Mapping
           Police Violence project</p>
