--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="cover">
     <img src='assets/img/spread.png' class="spread" alt="Full width cover image">
     <p class="fig-cap" style="max-width: 50%;">Screenshot of the interactive map illustrating every police killing in
-      2021 from the Mapping Police Violence project</p>
+      2021 from the <a href="dataProjects.html#mapping-police-violence">Mapping Police Violence project</a></p>
   </div>
   <div class="container">
     <div class="row top">
