Update navbar to feature dropdown for police data sections

--- a/policeDataNotes.html
+++ b/policeDataNotes.html
@@ -32,7 +32,15 @@
   </div>
   <div class="navbar">
     <a href="index.html">Home</a>
-    <a href="policeData.html">Police Data</a>
+    <div class="dropdown">
+      <button class="dropbtn">Police Data
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="policeData.html">Source Data Accessibility</a>
+        <a class="active" href="policeDataNotes.html">Research Process & Notes</a>
+      </div>
+    </div>
     <div class="dropdown">
       <button class="dropbtn">Data Advocacy
         <i class="fa fa-caret-down"></i>
