Review police data process page

--- a/policeDataNotes.html
+++ b/policeDataNotes.html
@@ -4,53 +4,31 @@
 <head>
   <meta http-equiv="Content-Type" content="text/htmla; charset=UTF-8">
   <title>Police Data Accessibility, Data Advocacy, & Abolition</title>
-  <meta name="keywords"
-    content="policing, data, prision abolition, data advocacy, data activism, public records requests">
-  <meta name="description"
-    content="Accessibility and limitations of policing data in the US and the implications this has on abolitionist movements.">
+  <meta name="keywords" content="policing, data, prision abolition, data advocacy, data activism, public records requests">
+  <meta name="description" content="Accessibility and limitations of policing data in the US and the implications this has on abolitionist movements.">
   <meta name="author" content="Maeve Stites">
-
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/img/favicon/site.webmanifest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/2a97e054bf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="header">
-    <div class="logo">
-      <a href="index.html"><img src='assets/img/logo.png' png="logo" class="logo"
-          alt="site logo which reads create" /></a>
-    </div>
+    <div class="logo"> <a href="index.html"><img src='assets/img/logo.png' png="logo" class="logo" alt="site logo which reads create" /></a> </div>
   </div>
-  <div class="navbar">
-    <a href="index.html">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">Police Data
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="policeData.html">Source Data Accessibility</a>
-        <a class="active" href="policeDataNotes.html">Research Process & Notes</a>
-      </div>
+  <div class="navbar"> <a href="index.html">Home</a>
+    <div class="dropdown"> <button class="dropbtn">Police Data <i class="fa fa-caret-down"></i> </button>
+      <div class="dropdown-content"> <a href="policeData.html">Source Data Accessibility</a> <a class="active" href="policeDataNotes.html">Research Process & Notes</a> </div>
     </div>
-    <div class="dropdown">
-      <button class="dropbtn">Data Advocacy
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="dataProjects.html">Data Project Spotlight</a>
-        <a href="data&abolition.html">Data Advocacy & Abolition</a>
-      </div>
-    </div>
-    <a href="sources.html">Sources</a>
+    <div class="dropdown"> <button class="dropbtn">Data Advocacy <i class="fa fa-caret-down"></i> </button>
+      <div class="dropdown-content"> <a href="dataProjects.html">Data Project Spotlight</a> <a href="data&abolition.html">Data Advocacy & Abolition</a> </div>
+    </div> <a href="sources.html">Sources</a>
   </div>
   <div class="container">
     <div class="row top">
@@ -64,9 +42,10 @@
       <p>These questions were chosen to provide a broad overview of what the state of policing data accessibility is like. I also believed that answering these questions would cover the most commonly asked questions that I get when I bring up my own work using policing data.</p>
       <p>To answer these questions, I conducted a number of searches, drawing on a broad array of potential sources. I searched for academic papers and articles using academic databases, data advocacy projects, articles written by data scientists doing this work, legal resources about policy, government databases, and official government websites on legislation and records requests processes.</p>
       <h2>Summary of my Research Results</h2>
-      <p>I found large data advocacy projects that included insightful information on their records request experiences. This combined with articles written by people doing this work and the exploration of government data portals allowed me to confidently provide perspective on questions two and three. The synthesis of this information is what enabled me to write the information on the <a href="policeData.html">Police Source Data page</a>.</p>
-      <p>However, I was ultimately unable to find the sources I desired to answer the question regarding policy surrounding police data acquisition. I was able to find ample information on federal data processes, under FOIA (Freedom of Information Act - key resources listed on the Police Source Data page). But I was unable to find reputable, up-to-date, and applicable sources for general information on state freedom of information legislation. It is worth noting that if you are looking to find details for one specific state, the legislation should be publicly accessible for your review. Additionally, most states have public records requests portals with guidance on how to submit requests (see the <a href="https://www.mass.gov/topics/public-records-requests">MA portal</a> as an example). While it is great that these government resources exist, my research results showed that the reality of acquiring data doesn’t always match the expectations. This is why I was really hoping to find an external, third party piece that can interpret the legislation more based in reality and/or at a more nation wide level.</p>
-      <p>While I am disappointed I was unable to find this information, this lack of accessible information in itself is an important insight. The lack of accessible information communicates that there is yet another barrier in place of acquiring policing data. Without readily available information on the policies surrounding state policy, that is in a form that is relevant to policing data and interpretable without needing to pour through page upon page of legislation, it keeps people in the dark from what police are supposed to be doing regarding the openness of their information. This is yet another way that police are unable to be properly held accountable for their actions. Without the knowledge of what police should be doing according to the law, people submitting records requests don’t have the tools in the scenario that something goes wrong.</p>
+      <p>I found large data advocacy projects that included insightful information on their records request experiences. This combined with articles written by people doing this work and the exploration of government data portals allowed me to confidently provide perspective on questions two and three outlined above. The synthesis of this information is what enabled me to write the information on the <a href="policeData.html">Police Source Data page</a>.</p>
+      <p>However, I was ultimately unable to find the sources I desired to answer my questions regarding policy surrounding police data acquisition. I was able to find ample information on federal data processes, under FOIA (Freedom of Information Act - key resources listed on the <a href="policeData.html">Police Source Data page</a>). But I was unable to find reputable, up-to-date, and applicable sources for general information on state freedom of information legislation. It is worth noting that if you are looking to find details for one specific state, the legislation should be publicly accessible for your review. Additionally, most states have public records requests portals with guidance on how to submit requests (see the <a href="https://www.mass.gov/topics/public-records-requests">MA portal</a> as an example). While it is great that these government resources exist, my research results showed that the reality of acquiring data doesn’t always match the expectations. This is why I was really hoping to find an external, third party piece that can interpret the legislation more based in reality and/or at a more nation wide level.</p>
+      <p>While I am disappointed I was unable to find this information, this lack of accessible information in itself is an important insight. This lack of information communicates that there is yet another barrier in place of acquiring policing data. Without readily available information on the policies surrounding state policy, that is in a form that is relevant to policing data and interpretable without needing to pour through page upon page of legislation, people are kept in the dark from what police are supposed to be doing regarding the openness of their information. This is yet another way that police are unable to be properly held accountable for their actions. Without the knowledge of what police should be doing according to legislation, people submitting records requests don’t have the context or tools in the scenario that something doesn't go perfectly.</p>
     </div>
 </body>
+
 </html>
