Change elipsis to colon

--- a/policeData.html
+++ b/policeData.html
@@ -34,7 +34,7 @@
     <div class="row top">
       <h1>Police Source Data</h1>
       <p>The basis of any data project relies on access to quality, relevant data. For data projects using policing data to be viable, they need to be able to gain access to this data. On this page, I outline the key places that police source data can be acquired, and use my critical lens as someone with data science and anti-carceral perspectives to provide insights into the accessibility issues of acquiring this data.</p>
-      <p>This key goals of this section are to provide...</p>
+      <p>This key goals of this section are to provide:</p>
       <ol>
         <li>
           <p><b>An understanding of how policing organizations, in many cases, effectively hide or hinder access to data that could be used to quantify the harm they do in their communities.</b> When policing data is hard to access, it prevents data work from analyzing their harms. This serves to obscure their harms, implanting police's place in society.</p>
