Restructure sentence for portal explanation

--- a/policeData.html
+++ b/policeData.html
@@ -56,7 +56,7 @@
         <li>Public records requests</li>
       </ol>
       <h3>Government Data Portals</h3>
-      <p>Some amount of data is already available publicly on government data portals. Examples of these portals include:</p>
+      <p>There is some police data already available publicly on government data portals. Examples of these portals include:</p>
       <ol>
         <li><b>
             <p>Federal government portals.
